samples/_failures_safe/1761519661_a54e8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cdccd15.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_6cdccd15.c:145:9: error: expected declaration or statement at end of input
  145 |         for (int i = 0; i < graph->num_edges; i++) {
      |         ^~~
./samples/SAFE/__tmp_6cdccd15.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6cdccd15.c:145:9: error: expected declaration or statement at end of input
